feature_part_done

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,17 @@
   height: 100vh;
   overflow: hidden;
 }
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #386cdd4c;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #386bdd;
+}
