--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,15 @@
-.header {
+.header,
+.headerWhite {
   position: fixed;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
+  transition: background 0.3s ease-in-out;
+  z-index: 9999;
+}
+.headerWhite {
+  background-color: #fff;
 }
 .header_section_one {
   display: flex;
