--- a/src/components/Banner2/Banner2.css
+++ b/src/components/Banner2/Banner2.css
@@ -18,6 +18,7 @@
   margin-right: auto;
   width: 59%;
   text-align: center;
+  pointer-events: none;
 }
 .bannerText h1 {
   color: #fff;
@@ -25,10 +26,11 @@
   letter-spacing: 2px;
   margin: 0;
   font-weight: 800;
-  text-shadow: 4px 10px 0px #386cdd6b;
+  text-shadow: 10px 10px 0px #386cdd6b;
+  /* background-color: #7796d9; */
 }
 .bannerText p {
-  color: rgb(103, 103, 103);
+  color: rgb(242, 242, 242);
   font-size: 18px;
 }
 .bannerText button {
@@ -39,4 +41,12 @@
   border-radius: 10px;
   font-size: 19px;
   font-weight: 500;
+}
+@media only screen and (max-width: 600px) {
+  .bannerText h1 {
+    font-size: 46px;
+  }
+  .bannerText p {
+    font-size: 16px;
+  }
 }
