--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -59,11 +59,8 @@
   /* background-color: green; */
 }
 .number {
-  font-size: 450px;
-  font-weight: 800;
   position: absolute;
   left: -5%;
-  color: #386cdd51;
 }
 
 .contentBody {
@@ -83,20 +80,6 @@
   align-items: center;
 }
 
-.contentInner h1 {
-  font-size: 30px;
-  font-weight: 600;
-  color: #313131;
-  border-bottom: 1px solid #386bdd;
-  padding-bottom: 5px;
-  text-shadow: 10px 0 10px 0 red;
-}
-.contentInner p {
-  color: #313131bd;
-  font-size: 18px;
-  letter-spacing: 1px;
-  line-height: 30px;
-}
 .contentInner {
   width: 90%;
   display: flex;
@@ -123,24 +106,6 @@
 .outer-container > div {
   flex: 1;
   padding: 20px;
-}
-
-.outer-container .carousel-wrapper {
-  background: var(--orange);
-  display: flex;
-  flex-direction: column;
-}
-
-.outer-container .carousel-wrapper p,
-.carousel-item {
-  font-weight: 700;
-  font-size: 20px;
-  color: var(--white);
-  line-height: 1.3;
-}
-
-.outer-container .content {
-  background: var(--white);
 }
 
 .leading-text {
@@ -223,4 +188,56 @@
   padding: 0;
   color: rgba(128, 128, 128, 0.771);
   text-align: left;
+}
+@media only screen and (max-width: 600px) {
+  .offeringHeader {
+    font-size: 30px;
+    line-height: 42px;
+    display: flex;
+    margin-bottom: 10px;
+  }
+  .carousel-inner button h1 {
+    font-size: 25px;
+  }
+  .carousel-inner button p {
+    font-size: 16px;
+  }
+  .offeringHeader div:last-child span::before {
+    margin-bottom: -4px;
+    height: 4px;
+  }
+  .offeringHeader br {
+    display: none;
+  }
+  .offeringBody {
+    flex-direction: column;
+  }
+  .offeringBodyLeft,
+  .offeringBodyRight {
+    width: 100%;
+    height: 100%;
+  }
+  .contentBody {
+    margin-left: 0;
+    position: relative;
+    clip-path: none;
+    border-radius: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  .contentInner {
+    margin-left: 0;
+    width: 100%;
+    padding: 20px;
+  }
+  .contentInner video {
+    width: 100%;
+    border-radius: 10px;
+  }
+  .number {
+    display: none;
+  }
 }
