--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,17 +31,112 @@
   border-bottom: 2px solid transparent;
   transition: border 0.3s ease-in-out;
 }
+
 .header_section_one_black nav {
   color: rgb(0, 0, 0);
-}
-.header_section_one nav:last-child,
-.header_section_one_black nav:last-child {
-  background-color: #386bdd;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 15px;
 }
 
 .header_section_one nav:hover {
   border-bottom: 2px solid #386bdd;
+}
+.mobileView {
+  display: none;
+}
+.joinButton {
+  background-color: #386bdd;
+  color: #fff !important;
+  padding: 10px 20px;
+  border-radius: 15px;
+}
+.logo {
+  width: 40px;
+}
+.mobileViewMenuOpenIcon,
+.mobileViewMenuCloseIcon,
+.mobileViewMainContainer {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .header_section_one nav,
+  .header_section_one_black nav {
+    display: none;
+  }
+
+  .mobileViewMenuOpenIcon,
+  .mobileViewMenuCloseIcon {
+    display: block;
+    width: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 20px;
+  }
+
+  .logo {
+    width: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 30px;
+  }
+
+  .header,
+  .headerWhite {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    padding: 0;
+    right: 0;
+    background-color: transparent;
+  }
+
+  .mobileViewMainContainer {
+    display: block;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.75);
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    width: 70%;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+  }
+  .mobileViewInner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    padding: 10%;
+    margin-top: 40%;
+  }
+  .mobileViewInner nav {
+    font-size: 35px;
+    font-weight: 700;
+    color: #313131;
+    position: relative;
+    cursor: pointer;
+  }
+  .mobileViewInner nav:hover {
+    color: #fff;
+  }
+
+  .mobileViewInner nav:hover::after {
+    content: " ";
+    display: block;
+    height: 90%;
+    width: 60%;
+    margin-left: -3px;
+    margin-right: -3px;
+    position: absolute;
+    background: #386bdd;
+    transform: rotate(2deg);
+    top: -1px;
+    left: -10px;
+    border-radius: 20% 25% 20% 24%;
+    padding: 10px 3px 3px 10px;
+    z-index: -1;
+  }
 }
