--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,7 +10,12 @@
   z-index: 9999;
 }
 .headerWhite {
-  background-color: #fff;
+  backdrop-filter: blur(6px) saturate(180%);
+  -webkit-backdrop-filter: blur(6px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
+
+  border: 1px solid rgba(209, 213, 219, 0.3);
+  /* background-color: #fff; */
 }
 .header_section_one,
 .header_section_one_black {
@@ -37,7 +42,7 @@
 }
 
 .header_section_one nav:hover {
-  border-bottom: 2px solid #386bdd;
+  border-bottom: 2px solid #a0befd;
 }
 .mobileView {
   display: none;
@@ -47,6 +52,9 @@
   color: #fff !important;
   padding: 10px 20px;
   border-radius: 15px;
+}
+.joinButton:hover {
+  border-bottom: 2px solid transparent !important;
 }
 .logo {
   width: 40px;
@@ -89,7 +97,6 @@
     position: absolute;
     padding: 0;
     right: 0;
-    background-color: transparent;
   }
 
   .mobileViewMainContainer {
@@ -121,6 +128,14 @@
   }
   .mobileViewInner nav:hover {
     color: #fff;
+  }
+  .headerWhite {
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+    background-color: transparent;
+
+    border: none;
+    /* background-color: #fff; */
   }
 
   .mobileViewInner nav:hover::after {
